# austinbrian.github.io

./: .gitignore  .railwayignore  Dockerfile  Procfile  README.md  _config.yml  about.md  cfpb-topic-modeling.md  cfpb.md  docker-compose.yml  nixpacks.toml  portfolio.md  pyproject.toml  tax_votes.md  testfile.py
.github/workflows/: deploy.yml
.sass-cache/1b7afc498507f418ca5227ffbd6fd87f678afe55/: whiteglass.scssc
.sass-cache/b5676be37a4335dcc7e9bbc7f359b5fbabb4f009/: _base.scssc  _layout.scssc  _syntax-highlighting.scssc
_data/: navigation.yml
_posts/: 2017-03-20-ncaa-rd1.md  2017-04-03-ncaa_overfitting.md  2017-04-18-pres_counties.md  2017-05-04-clinton_importance_feat.md  2017-05-12-trump-100-days.md  2017-05-22-higher-ed-RD-clusters.md  2017-05-24-cfpb-complaints-inauguration.md
_posts/_site/: 2017-03-20-ncaa-rd1.html
_site/: about.html  feed.xml  index.html  model_50_topics_graphic.html  sitemap.xml
_site/about/: index.html
_site/archives/: index.html
_site/cfpb/: index.html
_site/cfpb-complaints-inauguration/: index.html
_site/cfpb-topic-modeling/: index.html
_site/clinton_importance_feat/: index.html
_site/company_cfpb_complaints/: index.html
_site/dc-dogs/: index.html
_site/higher-ed-RD-clusters/: index.html
_site/mood/: index.html
_site/ncaa-rd1/: index.html
_site/ncaa_overfitting/: index.html
_site/portfolio/: index.html
_site/pres_counties/: index.html
_site/tax_votes/: index.html
api/: Dockerfile  requirements.txt  start.sh
api/app/: db.py  (+1 more)
drafts/: 2017-05-15-higher-ed-RD-clusters.md
images/: lda_script.js
(+54 files in other folders)
