[project]
name = "austinbrian-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    "dash>=3.0.3",
    "dash-bootstrap-components>=2.0.1",
    "duckdb>=1.2.1",
    "fastapi>=0.115.12",
    "flask>=3.0.3",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.0",
]
